--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -15,4 +15,82 @@ html{
     display: flex;
     align-items: center;
     justify-content: center;
+ } 
+ .quote-container{
+   width:auto;
+   max-width: 900x;
+   padding: 20px 30px;
+   border-radius: 10px;
+   background-color: rgba(255, 255, 255, 10);
+   box-shadow: 2px 10px 10px 10px rgba(0, 0, 0, 0.4); 
+ }
+
+ .quote-text{
+   font-size: 2.75rem;
+ }
+
+ .long-quote{
+   font-size:2rem;
+ }
+
+ .fa-quote-left{
+   font-size: 4rem;
+ }
+
+ .quote-author{
+   margin-top: 15px;
+   font-size: 2rem;
+   font-weight: 400;
+   font-style: italic;
+ }
+
+.button-container{
+   margin-top: 15px;
+   display: flex;
+   justify-content: space-between;
+}
+
+button{
+   cursor: pointer;
+   font-size: 1.8rem;
+   border: none;
+   border-radius: 10px;
+   color: #ffffff;
+   background-color: #333;
+   outline: none;
+   padding: 0.5rem, 1.8rem;
+   box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
+
+}
+
+button:hover{
+   filter: brightness(130%);
+}
+
+button:active{
+   transform: translate(0, 0.3rem);
+   box-shadow : 0 0.1rem rgba(255, 255, 255, 0.65);
+}
+
+.twitter-button:hover {
+   color:#38a1f3;
+}
+
+.fa-twitter{
+   font-size: 2.5rem;
+}
+
+
+
+ /* Media Query */
+
+ @media screen and (max-width=1000px) {
+   
+   .quote-container{
+      margin: auto;
+
+   }
+   .quote-text{
+      font-size: 2.5rem;
+   }
  }
